--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@700&family=Roboto:ital,wght@0,100;1,100&display=swap");
-
 * {
   margin: 0;
   padding: 0;
@@ -7,6 +5,10 @@
 }
 
 .desktop-logo {
+  display: none;
+}
+
+.first-header {
   display: none;
 }
 
@@ -24,10 +26,13 @@
 }
 
 .menu-logo {
-  /* border: 1px solid black; */
   width: 55%;
   display: flex;
   justify-content: space-between;
+}
+
+.first-footer {
+  display: none;
 }
 
 .header {
@@ -77,14 +82,10 @@
 
 .first-section {
   width: 100%;
-
-  /* border: 1px solid black; */
 }
 
 .first-writeup {
   width: 90%;
-
-  /* border: 1px solid black; */
   margin: auto;
   margin-top: 20%;
 }
@@ -108,14 +109,10 @@
   font-size: 2vw;
   line-height: 3vh;
   color: #515151;
-
-  /* border: 1px solid black; */
 }
 
 .third-writeup {
   width: 90%;
-
-  /* border: 1px solid black; */
   margin: auto;
   margin-top: 3%;
 }
@@ -130,13 +127,10 @@
 }
 
 .main-icon {
-  /* border: 1px solid black; */
   width: 35%;
   height: 80%;
   display: flex;
   align-items: center;
-
-  /* justify-content: space-between; */
 }
 
 .main-icon > p {
@@ -152,8 +146,6 @@
   padding-bottom: 5%;
   text-align: center;
   background-color: #282b32;
-
-  /* border: 1px solid black; */
 }
 
 .main-program > h2 {
@@ -198,14 +190,10 @@
   color: white;
   padding: 2.5vh 2vw;
   margin-top: 5%;
-
-  /* border: 1px solid black; */
 }
 
 .featured-speakers {
   width: 100%;
-
-  /* border: 1px solid black; */
   padding-top: 4%;
   text-align: center;
 }
@@ -225,8 +213,6 @@
 
 .speaker1 {
   width: 90%;
-
-  /* border: 1px solid black; */
   margin: auto;
   display: flex;
   justify-content: space-between;
@@ -238,8 +224,6 @@
   font-size: 2vw;
   padding-top: 4%;
   text-align: start;
-
-  /* border: 1px solid black; */
 }
 
 .speaker1-write > p {
@@ -262,20 +246,26 @@
   width: 90%;
   height: 6vh;
   margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-top: 6%;
   border-radius: 3px;
-  padding-top: 2%;
   margin-bottom: 4%;
   box-shadow: 1px 1px 1px 1px gray;
-
-  /* border: 1px solid black; */
 }
 
-/* ABOUT */
+.more-inner {
+  display: flex;
+  justify-content: space-between;
+}
+
+.more-inner p {
+  margin-right: 2vw;
+}
+
 .hello-section {
   width: 90%;
-
-  /* border: 1px solid black; */
   margin: auto;
   text-align: center;
   margin-top: 3%;
@@ -296,8 +286,6 @@
   width: 90%;
   margin: auto;
   margin-top: 6%;
-
-  /* border: 1px solid black; */
 }
 
 .hello-write > p {
@@ -311,16 +299,12 @@
   padding-bottom: 5%;
   margin-top: 5%;
   background-color: #f7f7f8;
-
-  /* border: 1px solid black; */
 }
 
 .hello-contact {
   width: 70%;
   text-align: center;
   margin: auto;
-
-  /* border: 1px solid black; */
 }
 
 .hello-p {
@@ -333,17 +317,13 @@
   margin: auto;
   text-align: center;
   margin-top: 5%;
-
-  /* border: 1px solid black; */
 }
 
 .global-line {
-  width: 10%;
+  width: 3%;
   height: 0.2vh;
-
-  /* border: 1px solid black; */
   margin: auto;
-  margin-top: 3%;
+  margin-top: 2%;
   background-color: #f78c89;
 }
 
@@ -353,12 +333,9 @@
   margin: auto;
   text-align: center;
   margin-top: 4%;
-
-  /* border: 1px solid black; */
 }
 
 .about-logo {
-  /* margin-left: 25%; */
   margin-top: 5%;
   width: 100%;
 }
@@ -368,8 +345,6 @@
   margin: auto;
   margin-top: 5%;
   text-align: center;
-
-  /* border: 1px solid black; */
 }
 
 .see-summit > p {
@@ -377,7 +352,6 @@
 }
 
 .first-global {
-  /* border: 1px solid black; */
   padding-top: 12%;
   margin-top: 5%;
   color: white;
@@ -390,40 +364,55 @@
   margin-bottom: 3%;
 }
 
-.first-footer {
-  width: 100%;
-  margin-top: 5%;
-  padding-top: 5%;
-  background-color: #414246;
-  text-align: center;
-
-  /* border: 1px solid black; */
-}
-
-.first-footer > h2 {
-  color: white;
-}
-
 .footer-logos {
-  margin-top: 6%;
+  margin: auto;
   padding-top: 5%;
   padding-bottom: 5%;
+  width: 80vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.footer-logos img {
+  margin-top: 2vh;
 }
 
 .second-footer {
-  display: flex;
+  display: none;
   padding-top: 5%;
   padding-bottom: 5%;
   justify-content: space-around;
-
-  /* border: 1px solid black; */
 }
 
 .creative-common {
   font-size: 3vw;
   width: 40%;
+}
 
-  /* border: 1px solid black; */
+.first-footer-about {
+  width: 100%;
+  margin-top: 5%;
+  padding-top: 5%;
+  background-color: #414246;
+  text-align: center;
+}
+
+.second-footer-about {
+  display: flex;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  background-color: white;
+  margin-top: 10vh;
+  justify-content: space-around;
+}
+
+.foot-img-desk1 {
+  display: block;
+}
+
+.foot-img-desk2 {
+  display: none;
 }
 
 @media only screen and (min-width: 768px) {
@@ -435,8 +424,83 @@
     display: none;
   }
 
+  .first-footer-about {
+    display: none;
+  }
+
+  .first-footer {
+    display: block;
+    width: 100%;
+    margin-top: 5%;
+    padding-top: 5%;
+    background-color: #414246;
+    text-align: center;
+  }
+
+  .first-footer > h2 {
+    color: white;
+  }
+
+  .second-footer-about .creative-common2 {
+    color: white;
+  }
+
+  .second-footer-about p {
+    font-size: 1.5vw;
+  }
+
+  .second-footer-about img {
+    width: 15vw;
+  }
+
+  .foot-img-desk1 {
+    display: none;
+  }
+
+  .foot-img-desk2 {
+    display: block;
+  }
+
+  .first-header {
+    width: 100%;
+    height: 5vh;
+    background-color: #3e3e3e;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  .second-footer-about {
+    display: flex;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    background-color: #2e2e2e;
+    margin-top: 10vh;
+    justify-content: space-around;
+  }
+
+  .face-twitter {
+    width: 6vw;
+    display: flex;
+    margin-right: 1vw;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .first-nav {
+    width: 16vw;
+    margin-right: 7vw;
+  }
+
+  .first-nav ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    color: white;
+    justify-content: space-between;
+  }
+
   .desktop-logo {
-    /* border: 1px solid black; */
     display: flex;
     width: 85%;
     margin: auto;
@@ -445,8 +509,6 @@
 
   .desk-logo {
     width: 15%;
-
-    /* border: 1px solid black; */
   }
 
   .desktop-nav {
@@ -454,8 +516,6 @@
     align-items: center;
     justify-content: end;
     width: 70%;
-
-    /* border: 1px solid black; */
   }
 
   .desktop-nav ul {
@@ -463,8 +523,6 @@
     width: 80%;
     display: flex;
     justify-content: space-between;
-
-    /* border: 1px solid black; */
   }
 
   .desktop-nav ul li a {
@@ -508,14 +566,10 @@
     font-size: 1.5vw;
     line-height: 4vh;
     color: #515151;
-
-    /* border: 1px solid black; */
   }
 
   .third-writeup {
     width: 60%;
-
-    /* border: 1px solid black; */
     margin-left: 10%;
     margin-top: 3%;
   }
@@ -574,21 +628,14 @@
   }
 
   .desktop-speakers {
-    /* display: grid;
-        grid-template-rows: auto auto auto;
-        grid-template-columns: 1fr 1fr; */
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     gap: 10px;
-
-    /* border: 1px solid black; */
     width: 80%;
     height: 90vh;
     margin: auto;
     margin-top: 3%;
-
-    /* flex-wrap: wrap; */
   }
 
   .speaker1 {
@@ -600,13 +647,7 @@
     display: flex;
     font-size: 1vw;
     justify-content: space-between;
-
-    /* border: 1px solid black; */
   }
-
-  /* .speaker2 {
-    display: block;
-  } */
 
   .speaker2 > h3 {
     font-size: 1vw;
@@ -623,10 +664,6 @@
     margin-bottom: 2%;
   }
 
-  .first-footer {
-    display: block;
-  }
-
   .second-footer {
     display: flex;
   }
@@ -635,7 +672,6 @@
     font-size: 1.5vw;
   }
 
-  /* ABOUT  */
   .hello-section {
     width: 60%;
   }
